--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <div class="sidebar">
                 <div class="sidebar-text d-flex flex-column h-100 justify-content-center text-center">
                     <img class="mx-auto d-block w-75 bg-primary img-fluid rounded-circle mb-4 p-3" src="img/profile.jpg" alt="Image">
-                    <h1 class="font-weight-bold">Kate Glover</h1>
+                    <h1 class="font-weight-bold">Lindsay Stolting</h1>
                     <p class="mb-4">
-                        Justo stet no accusam stet invidunt sanctus magna clita vero eirmod, sit sit labore dolores lorem. Lorem at sit dolor dolores sed diam justo
+                        2nd year PhD student studying Neuroscience and Cognitive Science at Indiana University, Bloomington. Interests include: computational modeling/simulation studies of small neural networks, dynamical systems analysis, activity-dependent homeostatic plasticity, brain-body-environment systems
                     </p>
                     <div class="d-flex justify-content-center mb-5">
                         <a class="btn btn-outline-primary mr-2" href="#"><i class="fab fa-twitter"></i></a>
@@ -43,29 +43,23 @@
             </div>
             <div class="content">
                 <!-- Navbar Start -->
-                <div class="container p-0">
-                    <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
-                        <a href="" class="navbar-brand d-block d-lg-none">Navigation</a>
-                        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                            <div class="navbar-nav m-auto">
-                                <a href="index.html" class="nav-item nav-link active">Home</a>
-                                <a href="about.html" class="nav-item nav-link">About</a>
-                                <div class="nav-item dropdown">
-                                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
-                                    <div class="dropdown-menu">
-                                        <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                                        <a href="single.html" class="dropdown-item">Blog Detail</a>
-                                    </div>
-                                </div>
-                                <a href="contact.html" class="nav-item nav-link">Contact</a>
-                            </div>
+            <div class="container p-0">
+                <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
+                    <a href="" class="navbar-brand d-block d-lg-none">Navigation</a>
+                    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
+                        <div class="navbar-nav m-auto">
+                            <a href="index.html" class="nav-item nav-link">Home</a>
+                            <a href="about.html" class="nav-item nav-link">About</a>
+                            <a href="priorwork.html" class="nav-item nav-link">Prior Work</a>
+                            <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
-                    </nav>
-                </div>
-                <!-- Navbar End -->
+                    </div>
+                </nav>
+            </div>
+            <!-- Navbar End -->
                 
                 <!-- Carousel Start -->
                 <div class="container p-0">
