--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Customized Bootstrap Stylesheet -->
         <link href="css/style.css" rel="stylesheet">
     </head>
-
+s
     <body>
         <div class="wrapper">
             <div class="sidebar">
@@ -30,12 +30,12 @@
                         2nd year PhD student studying Neuroscience and Cognitive Science at Indiana University, Bloomington. Interests include: computational modeling/simulation studies of small neural networks, dynamical systems analysis, activity-dependent homeostatic plasticity, brain-body-environment systems
                     </p>
                     <div class="d-flex justify-content-center mb-5">
-                        <a class="btn btn-outline-primary mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-outline-primary mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-primary mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="btn btn-outline-primary mr-2" href="#"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-outline-primary mr-2" href="https://twitter.com/LindsayStolting"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-outline-primary mr-2" href="https://www.linkedin.com/in/lindsay-stolting/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-primary mr-2" href="https://github.com/ljstolting"><i class="fa-brands fa-github"></i></a>
+                        <a class="btn btn-outline-primary mr-2" href="https://orcid.org/0000-0002-2275-8264"><i class="fa-brands fa-orcid"></i></a>
+
                     </div>
-                    <a href="" class="btn btn-lg btn-block btn-primary mt-auto">Hire Me</a>
                 </div>
                 <div class="sidebar-icon d-flex flex-column h-100 justify-content-center text-right">
                     <i class="fas fa-2x fa-angle-double-right text-primary"></i>
