--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ s
                     <div class="d-flex justify-content-center mb-5">
                         <a class="btn btn-outline-primary mr-2" href="https://twitter.com/LindsayStolting"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-primary mr-2" href="https://www.linkedin.com/in/lindsay-stolting/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="btn btn-outline-primary mr-2" href="https://github.com/ljstolting"><i class="fa-brands fa-github-square"></i></a>
-                        <a class="btn btn-outline-primary mr-2" href="https://orcid.org/0000-0002-2275-8264"><i class="fa-brands fa-orcid"></i></a>
+                        <a class="btn btn-outline-primary mr-2" href="https://github.com/ljstolting"><i class="fab fa-github-square"></i></a>
+                        <a class="btn btn-outline-primary mr-2" href="https://orcid.org/0000-0002-2275-8264"><i class="fab fa-orcid"></i></a>
 
                     </div>
                 </div>
