--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ s
                     <div class="d-flex justify-content-center mb-5">
                         <a class="btn btn-outline-primary mr-2" href="https://twitter.com/LindsayStolting"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-primary mr-2" href="https://www.linkedin.com/in/lindsay-stolting/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="btn btn-outline-primary mr-2" href="https://github.com/ljstolting"><i class="fab fa-github-square"></i></a>
+                        <a class="btn btn-outline-primary mr-2" href="https://github.com/ljstolting"><i class="fab fa-github"></i></a>
                         <a class="btn btn-outline-primary mr-2" href="https://orcid.org/0000-0002-2275-8264"><i class="fab fa-orcid"></i></a>
 
                     </div>
@@ -246,7 +246,7 @@ s
                 <!-- Footer Start -->
                 <div class="container py-4 bg-secondary text-center">
                     <p class="m-0 text-white">
-                        &copy; <a class="text-white font-weight-bold" href="#">Your Site Name</a>. All Rights Reserved. Designed by <a class="text-white font-weight-bold" href="https://htmlcodex.com">HTML Codex</a>
+                        &copy; <a class="text-white font-weight-bold" href="#">Designed by <a class="text-white font-weight-bold" href="https://htmlcodex.com">HTML Codex</a>
                     </p>
                 </div>
                 <!-- Footer End -->
