--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ s
                     <img class="mx-auto d-block w-75 bg-primary img-fluid rounded-circle mb-4 p-3" src="img/profile.jpg" alt="Image">
                     <h1 class="font-weight-bold">Lindsay Stolting</h1>
                     <p class="mb-4">
-                        2nd year PhD student studying Neuroscience and Cognitive Science at Indiana University, Bloomington. Interests include: computational modeling/simulation studies of small neural networks, dynamical systems analysis, activity-dependent homeostatic plasticity, brain-body-environment systems
+                        2nd year PhD student studying Neuroscience and Cognitive Science at IU, Bloomington. Interests include: computational modeling of small artificial neural networks, dynamical systems analysis, activity-dependent homeostatic plasticity, brain-body-environment systems
                     </p>
                     <div class="d-flex justify-content-center mb-5">
                         <a class="btn btn-outline-primary mr-2" href="https://twitter.com/LindsayStolting"><i class="fab fa-twitter"></i></a>
