--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Bloggy - Personal Blog Template</title>
+        <title>Lindsay Stolting</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Free Website Template" name="keywords">
-        <meta content="Free Website Template" name="description">
+        <meta content="PhD Student Personal Website" name="keywords">
+        <meta content="PhD Student Personal Website" name="description">
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
@@ -27,13 +27,16 @@ s
                     <img class="mx-auto d-block w-75 bg-primary img-fluid rounded-circle mb-4 p-3" src="img/profile.jpg" alt="Image">
                     <h1 class="font-weight-bold">Lindsay Stolting</h1>
                     <p class="mb-4">
-                        2nd year PhD student studying Neuroscience and Cognitive Science at IU, Bloomington. Interests include: computational modeling of small artificial neural networks, dynamical systems analysis, activity-dependent homeostatic plasticity, brain-body-environment systems
+                        3rd year PhD student studying Neuroscience and Cognitive Science at Indiana University, Bloomington
                     </p>
+                    <p>
+                        Interests include: computational modeling of small artificial neural networks, dynamical systems analysis, activity-dependent homeostatic plasticity, individual variability, brain-body-environment systems
+                    </p> 
                     <div class="d-flex justify-content-center mb-5">
                         <a class="btn btn-outline-primary mr-2" href="https://twitter.com/LindsayStolting"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-primary mr-2" href="https://www.linkedin.com/in/lindsay-stolting/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-primary mr-2" href="https://github.com/ljstolting"><i class="fab fa-github"></i></a>
-                        <a class="btn btn-outline-primary mr-2" href="https://orcid.org/0000-0002-2275-8264"><ORCID></a>
+                        <a class="btn btn-outline-primary mr-2" href="https://orcid.org/0000-0002-2275-8264"><i class="fa-brands fa-orcid"></i></a>
 
                     </div>
                 </div>
