sidebar across pages

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Customized Bootstrap Stylesheet -->
         <link href="css/style.css" rel="stylesheet">
     </head>
-s
+
     <body>
         <div class="wrapper">
             <div class="sidebar">
@@ -30,13 +30,13 @@ s
                         3rd year PhD student studying Neuroscience and Cognitive Science at Indiana University, Bloomington
                     </p>
                     <p>
-                        Interests include: computational modeling of small artificial neural networks, dynamical systems analysis, activity-dependent homeostatic plasticity, individual variability, brain-body-environment systems
+                        Research Interests: dynamical systems analysis of small networks, activity-dependent homeostatic plasticity, central pattern generators, individual variability, brain-body-environment systems
                     </p> 
                     <div class="d-flex justify-content-center mb-5">
                         <a class="btn btn-outline-primary mr-2" href="https://twitter.com/LindsayStolting"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-primary mr-2" href="https://www.linkedin.com/in/lindsay-stolting/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-primary mr-2" href="https://github.com/ljstolting"><i class="fab fa-github"></i></a>
-                        <a class="btn btn-outline-primary mr-2" href="https://orcid.org/0000-0002-2275-8264"><i class="fa-brands fa-orcid"></i></a>
+                        <a class="btn btn-outline-primary mr-2" href="https://orcid.org/0000-0002-2275-8264">ORCID</a>
 
                     </div>
                 </div>
