--- a/priorwork.html
+++ b/priorwork.html
@@ -25,17 +25,20 @@
         <div class="sidebar">
             <div class="sidebar-text d-flex flex-column h-100 justify-content-center text-center">
                 <img class="mx-auto d-block w-75 bg-primary img-fluid rounded-circle mb-4 p-3" src="img/profile.jpg" alt="Image">
-                <h1 class="font-weight-bold">Kate Glover</h1>
-                <p class="mb-4">
-                    Justo stet no accusam stet invidunt sanctus magna clita vero eirmod, sit sit labore dolores lorem. Lorem at sit dolor dolores sed diam justo
-                </p>
-                <div class="d-flex justify-content-center mb-5">
-                    <a class="btn btn-outline-primary mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-outline-primary mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-primary mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-outline-primary mr-2" href="#"><i class="fab fa-instagram"></i></a>
-                </div>
-                <a href="" class="btn btn-lg btn-block btn-primary mt-auto">Hire Me</a>
+                <h1 class="font-weight-bold">Lindsay Stolting</h1>
+                    <p class="mb-4">
+                        3rd year PhD student studying Neuroscience and Cognitive Science at Indiana University, Bloomington
+                    </p>
+                    <p>
+                        Research Interests: dynamical systems analysis of small networks, activity-dependent homeostatic plasticity, central pattern generators, individual variability, brain-body-environment systems
+                    </p> 
+                    <div class="d-flex justify-content-center mb-5">
+                        <a class="btn btn-outline-primary mr-2" href="https://twitter.com/LindsayStolting"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-outline-primary mr-2" href="https://www.linkedin.com/in/lindsay-stolting/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-primary mr-2" href="https://github.com/ljstolting"><i class="fab fa-github"></i></a>
+                        <a class="btn btn-outline-primary mr-2" href="https://orcid.org/0000-0002-2275-8264">ORCID</a>
+
+                    </div>
             </div>
             <div class="sidebar-icon d-flex flex-column h-100 justify-content-center text-right">
                 <i class="fas fa-2x fa-angle-double-right text-primary"></i>
