--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 <!-- Footer Start -->
                 <div class="container py-4 bg-secondary text-center">
                     <p class="m-0 text-white">
-                        &copy; <a class="text-white font-weight-bold" href="#">Designed by <a class="text-white font-weight-bold" href="https://htmlcodex.com">HTML Codex</a>
+                        &copy; Lindsay Stolting. Designed by <a class="text-white font-weight-bold" href="https://htmlcodex.com">HTML Codex</a>
                     </p>
                 </div>
                 <!-- Footer End -->
