--- a/about.html
+++ b/about.html
@@ -36,7 +36,8 @@
                         <a class="btn btn-outline-primary mr-2" href="https://twitter.com/LindsayStolting"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-primary mr-2" href="https://www.linkedin.com/in/lindsay-stolting/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-primary mr-2" href="https://github.com/ljstolting"><i class="fab fa-github"></i></a>
-                        <a class="btn btn-outline-primary mr-2" href="https://orcid.org/0000-0002-2275-8264">ORCID</a>
+                        <a class="btn btn-outline-primary mr-2" href="https://orcid.org/0000-0002-2275-8264">ORCiD</a>
+                        <a class="btn btn-outline-primary mr-2" href="Stolting_CV_Public.pdf">CV</a>
 
                     </div>
             </div>
@@ -56,7 +57,8 @@
                         <div class="navbar-nav m-auto">
                             <a href="index.html" class="nav-item nav-link">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
-                            <a href="priorwork.html" class="nav-item nav-link">Prior Work</a>
+                            <a href="priorwork.html" class="nav-item nav-link">Publications</a>
+                            <a href="blog.html" class="nav-item nav-link">Blog</a>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
                     </div>
