--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,8 @@
                         <a class="btn btn-outline-primary mr-2" href="https://twitter.com/LindsayStolting"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-primary mr-2" href="https://www.linkedin.com/in/lindsay-stolting/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-primary mr-2" href="https://github.com/ljstolting"><i class="fab fa-github"></i></a>
-                        <a class="btn btn-outline-primary mr-2" href="https://orcid.org/0000-0002-2275-8264">ORCID</a>
+                        <a class="btn btn-outline-primary mr-2" href="https://orcid.org/0000-0002-2275-8264">ORCiD</a>
+                        <a class="btn btn-outline-primary mr-2" href="Stolting_CV_Public.pdf">CV</a>
 
                     </div>
             </div>
