--- a/blog.html
+++ b/blog.html
@@ -24,14 +24,22 @@
     <div class="wrapper">
         <div class="sidebar">
             <div class="sidebar-text d-flex flex-column h-100 justify-content-center text-center">
-                <img class="mx-auto d-block w-75 bg-primary img-fluid rounded-circle mb-4 p-3" src="img/profile.jpg" alt="Image">
-                <h1 class="font-weight-bold">Lindsay Stolting</h1>
-                    <p class="mb-4">
+                <p></p>
+                <img class="mx-auto d-block w-75 bg-primary img-fluid rounded-circle p-2" src="img/profile.jpg" alt="Image">
+                <h2 class="font-weight-bold">Lindsay Stolting</h2>
+                    <p class="mb-3">
                         3rd year PhD student studying Neuroscience and Cognitive Science at Indiana University, Bloomington
                     </p>
-                    <p>
-                        Research Interests: dynamical systems analysis of small networks, activity-dependent homeostatic plasticity, central pattern generators, individual variability, brain-body-environment systems
-                    </p> 
+                    <div>
+                    <span class="mb-4"><b>Research Interests:</b></span> 
+                    <ul class="text-md-left">
+                        <li>Activity-dependent Homeostatic Plasticity</li>
+                        <li>Motor Pattern Generators</li>
+                        <li>Individual Variability</li>
+                        <li>Brain-body-environment models</li>
+                        <li>Dynamical Systems Theory</li>
+                    </ul>
+                    </div>
                     <div class="d-flex justify-content-center mb-5">
                         <a class="btn btn-outline-primary mr-2" href="https://twitter.com/LindsayStolting"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-primary mr-2" href="https://www.linkedin.com/in/lindsay-stolting/"><i class="fab fa-linkedin-in"></i></a>
@@ -70,7 +78,7 @@
             <div class="container py-5 px-2 bg-primary">
                 <div class="row py-5 px-4">
                     <div class="col-sm-6 text-center text-md-left">
-                        <h1 class="mb-3 mb-md-0 text-white text-uppercase font-weight-bold">My Blog</h1>
+                        <h2 class="mb-3 mb-md-0 text-white text-uppercase font-weight-bold">My Blog</h2>
                     </div>
                     <div class="col-sm-6 text-center text-md-right">
                         <div class="d-inline-flex pt-2">
