--- a/about.html
+++ b/about.html
@@ -24,14 +24,22 @@
     <div class="wrapper">
         <div class="sidebar">
             <div class="sidebar-text d-flex flex-column h-100 justify-content-center text-center">
-                <img class="mx-auto d-block w-75 bg-primary img-fluid rounded-circle mb-4 p-3" src="img/profile.jpg" alt="Image">
-                <h1 class="font-weight-bold">Lindsay Stolting</h1>
-                    <p class="mb-4">
+                <p></p>
+                <img class="mx-auto d-block w-75 bg-primary img-fluid rounded-circle p-2" src="img/profile.jpg" alt="Image">
+                <h2 class="font-weight-bold">Lindsay Stolting</h2>
+                    <p class="mb-3">
                         3rd year PhD student studying Neuroscience and Cognitive Science at Indiana University, Bloomington
                     </p>
-                    <p>
-                        Research Interests: dynamical systems analysis of small networks, activity-dependent homeostatic plasticity, central pattern generators, individual variability, brain-body-environment systems
-                    </p> 
+                    <div>
+                    <span class="mb-4"><b>Research Interests:</b></span> 
+                    <ul class="text-md-left">
+                        <li>Activity-dependent Homeostatic Plasticity</li>
+                        <li>Motor Pattern Generators</li>
+                        <li>Individual Variability</li>
+                        <li>Brain-body-environment models</li>
+                        <li>Dynamical Systems Theory</li>
+                    </ul>
+                    </div>
                     <div class="d-flex justify-content-center mb-5">
                         <a class="btn btn-outline-primary mr-2" href="https://twitter.com/LindsayStolting"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-primary mr-2" href="https://www.linkedin.com/in/lindsay-stolting/"><i class="fab fa-linkedin-in"></i></a>
@@ -70,7 +78,7 @@
             <div class="container py-5 px-2 bg-primary">
                 <div class="row py-5 px-4">
                     <div class="col-sm-6 text-center text-md-left">
-                        <h1 class="mb-3 mb-md-0 text-white text-uppercase font-weight-bold">About Me</h1>
+                        <h2 class="mb-3 mb-md-0 text-white text-uppercase font-weight-bold">About Me</h2>
                     </div>
                     <div class="col-sm-6 text-center text-md-right">
                         <div class="d-inline-flex pt-2">
@@ -88,23 +96,11 @@
             <div class="container bg-white pt-5">
                 <div class="row px-3 pb-5">
                     <div class="col-md-12">
-                        <h2 class="mb-4 font-weight-bold">Article writer with 10 years of experience</h2>
-                        <img class="img-fluid float-left w-50 mr-4 mb-3" src="img/profile.jpg" alt="Image">
-                        <p class="m-0">
-                            Takimata lorem et ut et diam amet dolor gubergren, amet dolor eirmod sea sea invidunt, sed no sed diam ipsum ut et. Sit nonumy est ut consetetur sed, labore dolor ipsum sed ea dolor lorem erat et erat, consetetur sed labore duo voluptua rebum sed gubergren. Dolores nonumy sanctus erat clita stet sed, dolore justo diam eos aliquyam diam. Clita nonumy rebum dolor dolor eos takimata labore diam sed, et voluptua et invidunt sanctus, elitr dolor nonumy tempor dolor elitr lorem no dolor ipsum, ut at gubergren dolor est aliquyam stet, et sea takimata rebum labore erat duo invidunt lorem. At takimata stet diam dolore accusam, kasd at diam aliquyam diam sed est dolor takimata. Sadipscing rebum diam ea et tempor, eirmod et et invidunt voluptua et dolor sit. Labore labore clita et amet sea sit et, est ipsum eirmod amet voluptua dolore, diam eirmod kasd lorem gubergren clita at amet, sea accusam vero amet lorem eos sed diam sit amet, nonumy ipsum et tempor magna dolores aliquyam vero eos ipsum. Ipsum ipsum sadipscing diam aliquyam diam et ipsum eos vero, gubergren magna elitr elitr clita dolor. Aliquyam vero sed sanctus sed dolore sanctus elitr no amet, ea magna ipsum.
-                        </p>
-                    </div>
-                    <div class="col-md-12 pt-4">
-                        <div class="d-flex flex-column skills">
-                            <div class="progress w-100 mb-4">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">Adaptability</div>
-                            </div>
-                            <div class="progress w-100 mb-4">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">Research</div>
-                            </div>
-                            <div class="progress w-100">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">Editing</div>
-                            </div>
+                        <div class="mb-4"> <h3>Education</h3>
+                            <ul>
+                                <li>Bachelor of Science, Neuroscience & Mathematical Biology - William & Mary - <b>2017-2021</b></li>
+                                <li>PhD, Neuroscience & Cognitive Science - Indiana University, Bloomington - <b>2021-Present</b></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
