--- a/priorwork.html
+++ b/priorwork.html
@@ -24,14 +24,22 @@
     <div class="wrapper">
         <div class="sidebar">
             <div class="sidebar-text d-flex flex-column h-100 justify-content-center text-center">
-                <img class="mx-auto d-block w-75 bg-primary img-fluid rounded-circle mb-4 p-3" src="img/profile.jpg" alt="Image">
-                <h1 class="font-weight-bold">Lindsay Stolting</h1>
-                    <p class="mb-4">
+                <p></p>
+                <img class="mx-auto d-block w-75 bg-primary img-fluid rounded-circle p-2" src="img/profile.jpg" alt="Image">
+                <h2 class="font-weight-bold">Lindsay Stolting</h2>
+                    <p class="mb-3">
                         3rd year PhD student studying Neuroscience and Cognitive Science at Indiana University, Bloomington
                     </p>
-                    <p>
-                        Research Interests: dynamical systems analysis of small networks, activity-dependent homeostatic plasticity, central pattern generators, individual variability, brain-body-environment systems
-                    </p> 
+                    <div>
+                    <span class="mb-4"><b>Research Interests:</b></span> 
+                    <ul class="text-md-left">
+                        <li>Activity-dependent Homeostatic Plasticity</li>
+                        <li>Motor Pattern Generators</li>
+                        <li>Individual Variability</li>
+                        <li>Brain-body-environment models</li>
+                        <li>Dynamical Systems Theory</li>
+                    </ul>
+                    </div>
                     <div class="d-flex justify-content-center mb-5">
                         <a class="btn btn-outline-primary mr-2" href="https://twitter.com/LindsayStolting"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-primary mr-2" href="https://www.linkedin.com/in/lindsay-stolting/"><i class="fab fa-linkedin-in"></i></a>
@@ -70,13 +78,13 @@
             <div class="container py-5 px-2 bg-primary">
                 <div class="row py-5 px-4">
                     <div class="col-sm-6 text-center text-md-left">
-                        <h1 class="mb-3 mb-md-0 text-white text-uppercase font-weight-bold">My Blog</h1>
+                        <h2 class="mb-3 mb-md-0 text-white text-uppercase font-weight-bold">Publications & Software</h2>
                     </div>
                     <div class="col-sm-6 text-center text-md-right">
                         <div class="d-inline-flex pt-2">
                             <h4 class="m-0 text-white"><a class="text-white" href="index.html">Home</a></h4>
                             <h4 class="m-0 text-white px-2">/</h4>
-                            <h4 class="m-0 text-white">My Blog</h4>
+                            <h4 class="m-0 text-white">Publications</h4>
                         </div>
                     </div>
                 </div>
@@ -86,23 +94,6 @@
                 
                 <!-- Blog List Start -->
                 <div class="container bg-white pt-5">
-                    <div class="row blog-item px-3 pb-5">
-                        <div class="col-md-5">
-                            <img class="img-fluid mb-4 mb-md-0" src="img/blog-1.jpg" alt="Image">
-                        </div>
-                        <div class="col-md-7">
-                            <h3 class="mt-md-4 px-md-3 mb-2 py-2 bg-white font-weight-bold">Lorem ipsum dolor sit amet</h3>
-                            <div class="d-flex mb-3">
-                                <small class="mr-2 text-muted"><i class="fa fa-calendar-alt"></i> 01-Jan-2045</small>
-                                <small class="mr-2 text-muted"><i class="fa fa-folder"></i> Web Design</small>
-                                <small class="mr-2 text-muted"><i class="fa fa-comments"></i> 15 Comments</small>
-                            </div>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci velit id libero
-                            </p>
-                            <a class="btn btn-link p-0" href="">Read More <i class="fa fa-angle-right"></i></a>
-                        </div>
-                    </div>
                     <div class="row blog-item px-3 pb-5">
                         <div class="col-md-5">
                             <img class="img-fluid mb-4 mb-md-0" src="img/blog-2.jpg" alt="Image">
@@ -136,56 +127,33 @@
                             </p>
                             <a class="btn btn-link p-0" href="">Read More <i class="fa fa-angle-right"></i></a>
                         </div>
-                    </div>
+                    </div> 
                     <div class="row blog-item px-3 pb-5">
                         <div class="col-md-5">
-                            <img class="img-fluid mb-4 mb-md-0" src="img/blog-4.jpg" alt="Image">
+                            <img class="img-fluid mb-4 mb-md-0" src="img/blog-1.jpg" alt="Image">
                         </div>
                         <div class="col-md-7">
-                            <h3 class="mt-md-4 px-md-3 mb-2 py-2 bg-white font-weight-bold">Lorem ipsum dolor sit amet</h3>
-                            <div class="d-flex mb-3">
-                                <small class="mr-2 text-muted"><i class="fa fa-calendar-alt"></i> 01-Jan-2045</small>
-                                <small class="mr-2 text-muted"><i class="fa fa-folder"></i> Web Design</small>
-                                <small class="mr-2 text-muted"><i class="fa fa-comments"></i> 15 Comments</small>
+                            <h3 class="mt-md-4 px-md-3 mb-2 py-2 bg-white font-weight-bold">Conference Attendance</h3>
+                            <div><b>European Neuroscience Conference for Doctoral Students (ENCODS)</b> - 2022
+                                <p>Characterizing the role of activity-dependent homeostatic plasticity in central pattern generators
+                                <a class="btn btn-link p-0" href="encodsposter.pdf">Poster PDF <i class="fa fa-angle-right"></i></a>
+                                </p>
                             </div>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci velit id libero
-                            </p>
-                            <a class="btn btn-link p-0" href="">Read More <i class="fa fa-angle-right"></i></a>
-                        </div>
-                    </div>
-                    <div class="row blog-item px-3 pb-5">
-                        <div class="col-md-5">
-                            <img class="img-fluid mb-4 mb-md-0" src="img/blog-5.jpg" alt="Image">
-                        </div>
-                        <div class="col-md-7">
-                            <h3 class="mt-md-4 px-md-3 mb-2 py-2 bg-white font-weight-bold">Lorem ipsum dolor sit amet</h3>
-                            <div class="d-flex mb-3">
-                                <small class="mr-2 text-muted"><i class="fa fa-calendar-alt"></i> 01-Jan-2045</small>
-                                <small class="mr-2 text-muted"><i class="fa fa-folder"></i> Web Design</small>
-                                <small class="mr-2 text-muted"><i class="fa fa-comments"></i> 15 Comments</small>
+                            <div><b>Computational Neuroscience (CNS)</b> - 2023
+                                <p>Characterizing the Role of Homeostatic Plasticity in Central Pattern Generators
+                                <a class="btn btn-link p-0" href="RoleofHPinCPGsPoster.pdf">Poster PDF <i class="fa fa-angle-right"></i></a>
+                                </p>
                             </div>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci velit id libero
-                            </p>
-                            <a class="btn btn-link p-0" href="">Read More <i class="fa fa-angle-right"></i></a>
-                        </div>
-                    </div>
-                    <div class="row blog-item px-3 pb-5">
-                        <div class="col-md-5">
-                            <img class="img-fluid mb-4 mb-md-0" src="img/blog-6.jpg" alt="Image">
-                        </div>
-                        <div class="col-md-7">
-                            <h3 class="mt-md-4 px-md-3 mb-2 py-2 bg-white font-weight-bold">Lorem ipsum dolor sit amet</h3>
-                            <div class="d-flex mb-3">
-                                <small class="mr-2 text-muted"><i class="fa fa-calendar-alt"></i> 01-Jan-2045</small>
-                                <small class="mr-2 text-muted"><i class="fa fa-folder"></i> Web Design</small>
-                                <small class="mr-2 text-muted"><i class="fa fa-comments"></i> 15 Comments</small>
+                            <div><b>Aritificial Life (ALIFE)</b> - 2023
+                                <p>Characterizing the Role of Homeostatic Plasticity in Central Pattern Generators</p>
+                                <p>
+                                <a class="btn btn-link p-0" href="RoleofHPinCPGsPoster.pdf">Poster PDF <i class="fa fa-angle-right"></i></a>
+                                <a class="btn btn-link p-0" href="ALIFEPresentation.mp4">Poster Presentation <i class="fa fa-angle-right"></i></a>
+                                </p>
                             </div>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci velit id libero
-                            </p>
-                            <a class="btn btn-link p-0" href="">Read More <i class="fa fa-angle-right"></i></a>
+                            <div><b>Animal Behavior Conference</b> - 2023, 2024
+                                <p>Poster Committee Chair, Program Committee Chair, Poster Competition Judge</p>
+                            </div>
                         </div>
                     </div>
                     <div class="row px-3 pb-5">
