--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
             <!-- Navbar Start -->
             <div class="container p-0">
                 <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
-                    <a href="" class="navbar-brand d-block d-lg-none">Navigation</a>
+                    <a href="" class="navbar-brand d-block d-lg-none">Pages</a>
                     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -76,7 +76,7 @@
 
             <!-- Page Header Start -->
             <div class="container py-5 px-2 bg-primary">
-                <div class="row py-5 px-4">
+                <div class="row py-2 px-4">
                     <div class="col-sm-6 text-center text-md-left">
                         <h2 class="mb-3 mb-md-0 text-white text-uppercase font-weight-bold">About Me</h2>
                     </div>
@@ -99,7 +99,48 @@
                         <div class="mb-4"> <h3>Education</h3>
                             <ul>
                                 <li>Bachelor of Science, Neuroscience & Mathematical Biology - William & Mary - <b>2017-2021</b></li>
-                                <li>PhD, Neuroscience & Cognitive Science - Indiana University, Bloomington - <b>2021-Present</b></li>
+                                <li>PhD, Neuroscience & Cognitive Science - Indiana University, Bloomington - <b>2021-Present</b>
+                                <ul><li>Advisors: <a href="https://rdbeer.pages.iu.edu/">Dr. Randall Beer</a>, <a href="https://edizquierdo.github.io/">Dr. Eduardo Izquierdo</a></li>
+                                <li>Committee Members: Dr. Olaf Sporns, Dr. John Beggs</li></ul></li>
+                            </ul>
+                        </div>
+                        <div class="mb-4"> <h3>Research Areas</h3> *<a href="contact.html">contact me</a> if you are interested in collaboration!
+                            <p></p>
+                            <ul>
+                                <li>Neural Parameter Space Degeneracy: there are many ways to configure a nervous system's components to produce the same desired outcome (a.k.a. adaptive behavior)
+                                    <ul>
+                                        <li>How is the variability between the neural parameters of individuals structured? Do organisms actually make use of all theoretically acceptable configurations of their components?*</li>
+                                        <li>How do processes like development, neuromodulation, disease, and homeostatic plasticity, change a system's position in that space of possibilities? For better or worse?</li>
+                                        <li>The nature of degeneracy means that organisms have limited information about their current state. Can they still effectively guide their behavior despite this limitation?*</li>
+                                        <li>How can organisms balance their robustness to unwanted external perturbations, while responding flexibly to their environment when appropriate?*</li>
+                                    </ul>
+                                </li>
+                                <li>Motor Pattern Generators: Rhythmic movements are essential in most brain-body-environment systems
+                                    <ul>
+                                        <li>Many rhythmic motor patterns (e.g. the <i>Aplysia</i> feeding cycle) exhibit cycle-to-cycle variability. What kinds of environmental perturbation might underly this variability, and what kinds would be "averaged away"?*</li>
+                                        <li>Olfaction requires thatregular breathing rhythms be co-opted for sniffing. What is the mechanism behind this control, and how is it shaped by incoming odor information to produce adaptive behaviors like navigation and source differentiation?</li>
+                                        <li>What tools from dynamical systems theory are most useful for describing these patterns in situated, embodied organisms?</li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="mb-4"> <h3>Skills</h3>
+                            <ul>
+                                <li>Coding Languages <ul>
+                                    <li>Python</li>
+                                    <li>C++</li>
+                                    <li>Mathematica</li>
+                                    <li>MATLAB</li>
+                                    <li>R</li>
+                                </ul></li>
+                                <li>Mathematics <ul>
+                                    <li>Ordinary & Partial Differential Equations</li>
+                                    <li>Information Theory</li>
+                                    <li>Linear Algebra</li>
+                                    <li>Statistical Analysis</li>
+                                </ul></li>
+                            <li>Scientific writing</li>
+                            <li>Agent-based modeling</li>
                             </ul>
                         </div>
                     </div>
