--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
             <!-- Navbar Start -->
             <div class="container p-0">
                 <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
-                    <a href="" class="navbar-brand d-block d-lg-none">Navigation</a>
+                    <a href="" class="navbar-brand d-block d-lg-none">Pages</a>
                     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -93,8 +93,8 @@
 
 
             <!-- Contact Start -->
-            <div class="container bg-white pt-5">
-                <div class="col-sm-4 text-center mb-3">
+            <div class="bg-white pt-5">
+                <div class="p-4 text-center mb-3">
                     <i class="far fa-2x fa-envelope mb-3 text-primary"></i>
                     <h4 class="font-weight-bold">Email</h4>
                     <a href="mailto:lstoltin@iu.edu">lstoltin@iu.edu</a>
