--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <!-- Navbar Start -->
             <div class="container p-0">
                 <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
-                    <a href="" class="navbar-brand d-block d-lg-none">Navigation</a>
+                    <a href="" class="navbar-brand d-block d-lg-none">Pages</a>
                     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -73,75 +73,34 @@
                 </nav>
             </div>
             <!-- Navbar End -->   
-            <div> 
+
+            <!-- Page Header Start -->
+            <div class="container py-5 px-2 bg-primary">
+                <div class="row py-2 px-4">
+                    <div class="col-sm-6 text-center text-md-left">
+                        <h2 class="mb-3 mb-md-0 text-white text-uppercase font-weight-bold">Home Page</h2>
+                    </div>
+                </div>
+            </div>
+            <!-- Page Header End -->
+
+            <div>
                 <!-- Blog List Start -->
-                <div class="container bg-white pt-5">
+                <div class="container bg-white pt-5"> 
                     <div class="row blog-item px-3 pb-5">
-                        <div class="col-md-5">
-                            <img class="img-fluid mb-4 mb-md-0" src="img/blog-2.jpg" alt="Image">
+                        <div class="col-md-4">
+                            <img class="img-fluid mb-4 mb-md-0" src="img/reparamabstractfigure.jpg" alt="Image">
+                            <img class="img-fluid mb-4 mb-md-0" src="img/Sporadicbifurcation.png" alt="Image">
                         </div>
-                        <div class="col-md-7">
-                            <h3 class="mt-md-4 px-md-3 mb-2 py-2 bg-white font-weight-bold">About Me & My Research</h3>
-                            <div class="d-flex mb-3">
-                                <small class="mr-2 text-muted"><i class="fa fa-calendar-alt"></i> 01-Jan-2045</small>
-                                <small class="mr-2 text-muted"><i class="fa fa-folder"></i> Web Design</small>
-                                <small class="mr-2 text-muted"><i class="fa fa-comments"></i> 15 Comments</small>
-                            </div>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci velit id libero
-                            </p>
-                            <a class="btn btn-link p-0" href="about.html">Read More <i class="fa fa-angle-right"></i></a>
-                        </div>
-                    </div>
-                    <div class="row blog-item px-3 pb-5">
-                        <div class="col-md-5">
-                            <img class="img-fluid mb-4 mb-md-0" src="img/blog-2.jpg" alt="Image">
-                        </div>
-                        <div class="col-md-7">
-                            <h3 class="mt-md-4 px-md-3 mb-2 py-2 bg-white font-weight-bold">Publications & Software</h3>
-                            <div class="d-flex mb-3">
-                                <small class="mr-2 text-muted"><i class="fa fa-calendar-alt"></i> 01-Jan-2045</small>
-                                <small class="mr-2 text-muted"><i class="fa fa-folder"></i> Web Design</small>
-                                <small class="mr-2 text-muted"><i class="fa fa-comments"></i> 15 Comments</small>
-                            </div>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci velit id libero
-                            </p>
-                            <a class="btn btn-link p-0" href="priorwork.html">Read More <i class="fa fa-angle-right"></i></a>
-                        </div>
-                    </div>
-                    <div class="row blog-item px-3 pb-5">
-                        <div class="col-md-5">
-                            <img class="img-fluid mb-4 mb-md-0" src="img/blog-1.jpg" alt="Image">
-                        </div>
-                        <div class="col-md-7">
-                            <h3 class="mt-md-4 px-md-3 mb-2 py-2 bg-white font-weight-bold">My Blog</h3>
-                            <div class="d-flex mb-3">
-                                <small class="mr-2 text-muted"><i class="fa fa-calendar-alt"></i> 01-Jan-2045</small>
-                                <small class="mr-2 text-muted"><i class="fa fa-folder"></i> Web Design</small>
-                                <small class="mr-2 text-muted"><i class="fa fa-comments"></i> 15 Comments</small>
-                            </div>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci velit id libero
-                            </p>
-                            <a class="btn btn-link p-0" href="blog.html">Read More <i class="fa fa-angle-right"></i></a>
-                        </div>
-                    </div>
-                    <div class="row blog-item px-3 pb-5">
-                        <div class="col-md-5">
-                            <img class="img-fluid mb-4 mb-md-0" src="img/blog-3.jpg" alt="Image">
-                        </div>
-                        <div class="col-md-7">
-                            <h3 class="mt-md-4 px-md-3 mb-2 py-2 bg-white font-weight-bold">Contact Me</h3>
-                            <div class="d-flex mb-3">
-                                <small class="mr-2 text-muted"><i class="fa fa-calendar-alt"></i> 01-Jan-2045</small>
-                                <small class="mr-2 text-muted"><i class="fa fa-folder"></i> Web Design</small>
-                                <small class="mr-2 text-muted"><i class="fa fa-comments"></i> 15 Comments</small>
-                            </div>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci velit id libero
-                            </p>
-                            <a class="btn btn-link p-0" href="contact.html">Read More <i class="fa fa-angle-right"></i></a>
+                        <div class="col-sm-2"></div>
+                        <div class="col-md-6">
+                            <h3 class="mt-md-3 px-md-4 mb-2 py-2 bg-primary font-weight-bold"><a class="text-white" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" href="about.html">About Me</a></h3>
+                            <div class="mb-2"> Education, Research Questions, Skills</div>
+                            <h3 class="mt-md-3 px-md-4 mb-2 py-2 bg-primary font-weight-bold"><a class="text-white" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" href="priorwork.html">Publications & Software</a></h3>
+                            <div class="mb-2"> Papers, Code Files, Conference Attendance</div>
+                            <h3 class="mt-md-3 px-md-4 mb-2 py-2 bg-primary font-weight-bold"><a class="text-white" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" href="blog.html">Research Blog</a></h3>
+                            <div class="mb-2"> Last Updated 1/15/24</div>
+                            <h3 class="mt-md-3 px-md-4 mb-2 py-2 bg-primary font-weight-bold"><a class="text-white" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" href="contact.html">Contact Me</a></h3>
                         </div>
                     </div>
                 </div>
