--- a/blog.html
+++ b/blog.html
@@ -57,7 +57,7 @@
             <!-- Navbar Start -->
             <div class="container p-0">
                 <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
-                    <a href="" class="navbar-brand d-block d-lg-none">Navigation</a>
+                    <a href="" class="navbar-brand d-block d-lg-none">Pages</a>
                     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -76,9 +76,9 @@
 
             <!-- Page Header Start -->
             <div class="container py-5 px-2 bg-primary">
-                <div class="row py-5 px-4">
+                <div class="row py-2 px-4">
                     <div class="col-sm-6 text-center text-md-left">
-                        <h2 class="mb-3 mb-md-0 text-white text-uppercase font-weight-bold">My Blog</h2>
+                        <h2 class="mb-3 mb-md-0 text-white text-uppercase font-weight-bold">Research Blog</h2>
                     </div>
                     <div class="col-sm-6 text-center text-md-right">
                         <div class="d-inline-flex pt-2">
