shorten names, consistent structure

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <div class="navbar-nav m-auto">
                             <a href="index.html" class="nav-item nav-link">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
-                            <a href="research.html" class="nav-item nav-link">Dissertation Research</a>
+                            <a href="research.html" class="nav-item nav-link">Research</a>
                             <a href="teaching.html" class="nav-item nav-link">Teaching</a>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
@@ -96,10 +96,10 @@
                         <div class="col-md-6">
                             <h3 class="mt-md-3 px-md-4 mb-2 py-2 bg-primary font-weight-bold"><a class="text-white" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" href="about.html">About Me</a></h3>
                             <div class="mb-2"> Education, Research Questions, Skills</div>
-                            <h3 class="mt-md-3 px-md-4 mb-2 py-2 bg-primary font-weight-bold"><a class="text-white" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" href="priorwork.html">Publications & Software</a></h3>
-                            <div class="mb-2"> Papers, Code Files, Conference Attendance</div>
-                            <h3 class="mt-md-3 px-md-4 mb-2 py-2 bg-primary font-weight-bold"><a class="text-white" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" href="blog.html">Research Blog</a></h3>
-                            <div class="mb-2"> Last Updated 1/15/24</div>
+                            <h3 class="mt-md-3 px-md-4 mb-2 py-2 bg-primary font-weight-bold"><a class="text-white" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" href="research.html">Publications & Software</a></h3>
+                            <div class="mb-2"> Papers, Code Repositories, Presentations</div>
+                            <h3 class="mt-md-3 px-md-4 mb-2 py-2 bg-primary font-weight-bold"><a class="text-white" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" href="teaching.html">Teaching & Resources</a></h3>
+                            <div class="mb-2"> Recommended Resources</div>
                             <h3 class="mt-md-3 px-md-4 mb-2 py-2 bg-primary font-weight-bold"><a class="text-white" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" href="contact.html">Contact Me</a></h3>
                         </div>
                     </div>
