--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                 <img class="mx-auto d-block w-75 bg-primary img-fluid rounded-circle p-2" src="img/profile.jpg" alt="Image">
                 <h2 class="font-weight-bold">Lindsay Stolting</h2>
                     <p class="mb-3">
-                        3rd year PhD student studying Neuroscience and Cognitive Science at Indiana University, Bloomington
+                        5th year PhD student studying Neuroscience and Cognitive Science at Indiana University, Bloomington
                     </p>
                     <div>
                     <span class="mb-4"><b>Research Interests:</b></span> 
