--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Lindsay Stolting</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="PhD Student Personal Website" name="keywords">
+        <meta content="Lindsay Stolting" name="keywords">
         <meta content="PhD Student Personal Website" name="description">
 
         <!-- Favicon -->
@@ -28,7 +28,7 @@
                     <img class="mx-auto d-block w-75 bg-primary img-fluid rounded-circle p-2" src="img/profile.jpg" alt="Image">
                     <h2 class="font-weight-bold">Lindsay Stolting</h2>
                         <p class="mb-3">
-                            3rd year PhD student studying Neuroscience and Cognitive Science at Indiana University, Bloomington
+                            5th year PhD student studying Neuroscience and Cognitive Science at Indiana University, Bloomington
                         </p>
                         <div>
                         <span class="mb-4"><b>Research Interests:</b></span> 
