fixing potential keyword error

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <title>Lindsay Stolting</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Lindsay Stolting" name="keywords">
-        <meta content="PhD Student Personal Website" name="description">
+        <meta content="Academic Personal Website" name="keywords">
+        <meta content="Academic Personal Website" name="description">
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
