Bunch of changes that I'm sure messed things up

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                 <img class="mx-auto d-block w-75 bg-primary img-fluid rounded-circle p-2" src="img/profile.jpg" alt="Image">
                 <h2 class="font-weight-bold">Lindsay Stolting</h2>
                     <p class="mb-3">
-                        5th year PhD student studying Neuroscience and Cognitive Science at Indiana University, Bloomington
+                        5th year PhD student studying Neuroscience and Cognitive Science at Indiana University
                     </p>
                     <div>
                     <span class="mb-4"><b>Research Interests:</b></span> 
@@ -65,7 +65,7 @@
                         <div class="navbar-nav m-auto">
                             <a href="index.html" class="nav-item nav-link">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
-                            <a href="research.html" class="nav-item nav-link">Research</a>
+                            <a href="research.html" class="nav-item nav-link">Publications</a>
                             <a href="teaching.html" class="nav-item nav-link">Teaching</a>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
@@ -98,13 +98,17 @@
                     <div class="col-md-12">
                         <div class="mb-4"> <h3>Education</h3>
                             <ul>
-                                <li>Bachelor of Science, Neuroscience & Mathematical Biology - William & Mary - <b>2017-2021</b></li>
-                                <li>PhD, Neuroscience & Cognitive Science - Indiana University, Bloomington - <b>2021-Present</b>
+                                <li>Bachelor of Science, Neuroscience & Mathematical Biology - William & Mary - Williamsburg, VA - <b>2017-2021</b></li>
+                                <li>PhD, Neuroscience & Cognitive Science - Indiana University - Bloomington, IN - <b>2021-Present</b>
                                 <ul><li>Advisors: <a href="https://rdbeer.pages.iu.edu/">Dr. Randall Beer</a>, <a href="https://edizquierdo.github.io/">Dr. Eduardo Izquierdo</a></li>
                                 <li>Committee Members: Dr. Olaf Sporns, Dr. John Beggs</li></ul></li>
                             </ul>
                         </div>
-                        <div class="mb-4"> <h3>Research Areas</h3> *<a href="contact.html">contact me</a> if you are interested in collaboration!
+                        <div class="mb-4"> <h3>Dissertation Topic</h3> 
+                            <p></p>
+                            
+                        </div>
+                        <div class="mb-4"> <h3>Projects</h3> 
                             <p></p>
                             <ul>
                                 <li>Neural Parameter Space Degeneracy: there are many ways to configure a nervous system's components to produce the same desired outcome (a.k.a. adaptive behavior)
@@ -120,6 +124,14 @@
                                         <li>Many rhythmic motor patterns (e.g. the <i>Aplysia</i> feeding cycle) exhibit cycle-to-cycle variability. What kinds of environmental perturbation might underly this variability, and what kinds would be "averaged away"?*</li>
                                         <li>Olfaction requires thatregular breathing rhythms be co-opted for sniffing. What is the mechanism behind this control, and how is it shaped by incoming odor information to produce adaptive behaviors like navigation and source differentiation?</li>
                                         <li>What tools from dynamical systems theory are most useful for describing these patterns in situated, embodied organisms?</li>
+                                    </ul>
+                                </li>
+                                <li>Activity-dependent Homeostatic Plasticity: Neurons and neural circuits must maintain stable activity levels in the face of constant internal and external perturbations
+                                    <ul>
+                                        <li>How do neurons use local information to globally regulate their activity levels?*</li>
+                                        <li>What are the dynamical consequences of different homeostatic mechanisms on single neurons and neural circuits?*</li>
+                                        <li>How do different homeostatic mechanisms interact with one another, and with other forms of plasticity (e.g. Hebbian plasticity)?*</li>
+                                        <li>How can we leverage our understanding of homeostatic plasticity to design more robust artificial neural networks?</li>
                                     </ul>
                                 </li>
                             </ul>
