--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <img class="mx-auto d-block w-75 bg-primary img-fluid rounded-circle p-2" src="img/profile.jpg" alt="Image">
                     <h2 class="font-weight-bold">Lindsay Stolting</h2>
                         <p class="mb-3">
-                            5th year PhD student studying Neuroscience and Cognitive Science at Indiana University, Bloomington
+                            5th year PhD student studying Neuroscience and Cognitive Science at Indiana University
                         </p>
                         <div>
                         <span class="mb-4"><b>Research Interests:</b></span> 
@@ -65,7 +65,7 @@
                         <div class="navbar-nav m-auto">
                             <a href="index.html" class="nav-item nav-link">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
-                            <a href="research.html" class="nav-item nav-link">Research</a>
+                            <a href="research.html" class="nav-item nav-link">Publications</a>
                             <a href="teaching.html" class="nav-item nav-link">Teaching</a>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
@@ -78,7 +78,7 @@
             <div class="container py-5 px-2 bg-primary">
                 <div class="row py-2 px-4">
                     <div class="col-sm-6 text-center text-md-left">
-                        <h2 class="mb-3 mb-md-0 text-white text-uppercase font-weight-bold">Home Page</h2>
+                        <h2 class="mb-3 mb-md-0 text-white text-uppercase font-weight-bold">Home</h2>
                     </div>
                 </div>
             </div>
@@ -99,7 +99,7 @@
                             <h3 class="mt-md-3 px-md-4 mb-2 py-2 bg-primary font-weight-bold"><a class="text-white" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" href="research.html">Publications & Software</a></h3>
                             <div class="mb-2"> Papers, Code Repositories, Presentations</div>
                             <h3 class="mt-md-3 px-md-4 mb-2 py-2 bg-primary font-weight-bold"><a class="text-white" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" href="teaching.html">Teaching & Resources</a></h3>
-                            <div class="mb-2"> Recommended Resources</div>
+                            <div class="mb-2"> Experience, Recommended Resources</div>
                             <h3 class="mt-md-3 px-md-4 mb-2 py-2 bg-primary font-weight-bold"><a class="text-white" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" href="contact.html">Contact Me</a></h3>
                         </div>
                     </div>
