--- a/teaching.html
+++ b/teaching.html
@@ -65,7 +65,7 @@
                         <div class="navbar-nav m-auto">
                             <a href="index.html" class="nav-item nav-link">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
-                            <a href="research.html" class="nav-item nav-link">Research</a>
+                            <a href="research.html" class="nav-item nav-link">Publications</a>
                             <a href="teaching.html" class="nav-item nav-link">Teaching</a>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
@@ -78,13 +78,13 @@
             <div class="container py-5 px-2 bg-primary">
                 <div class="row py-2 px-4">
                     <div class="col-sm-6 text-center text-md-left">
-                        <h2 class="mb-3 mb-md-0 text-white text-uppercase font-weight-bold">Research Blog</h2>
+                        <h2 class="mb-3 mb-md-0 text-white text-uppercase font-weight-bold">Teaching & Resources</h2>
                     </div>
                     <div class="col-sm-6 text-center text-md-right">
                         <div class="d-inline-flex pt-2">
                             <h4 class="m-0 text-white"><a class="text-white" href="index.html">Home</a></h4>
                             <h4 class="m-0 text-white px-2">/</h4>
-                            <h4 class="m-0 text-white">My Blog</h4>
+                            <h4 class="m-0 text-white">Teaching</h4>
                         </div>
                     </div>
                 </div>
