--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
             <div>
                 <!-- Blog List Start -->
-                <div class="container bg-light pt-5"> 
+                <div class="container bg-white pt-5"> 
                     <div class="row blog-item px-3 pb-5">
                         <div class="col-md-4">
                             <img class="img-fluid mb-4 mb-md-0" src="img/reparamabstractfigure.jpg" alt="Image">
