--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
 
 
             <!-- Contact Start -->
-            <div class="bg-light pt-5">
+            <div class="bg-white pt-5">
                 <div class="p-4 text-center mb-3">
                     <i class="far fa-2x fa-envelope mb-3 text-primary"></i>
                     <h4 class="font-weight-bold">Email</h4>
